add function check result

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css2?family=Russo+OneDisplay=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <title>Quiz JS</title>
 </head>
 
@@ -16,9 +16,9 @@
 
     <div class="container-global">
 
-        <form class="form-quiz">
+        <form class="form-quizz">
             <div class="question-block">
-                <h4>Je suis d'origine bresilienne pourtant j'ai joué pour la Scuadra Azura, j'ai joué dans les championnats Francais, Espagnol et Italien qui suis-je ?</h4>
+                <h4>Je suis d'origine bresilienne pourtant j'ai joué pour la Squadra Azzura, j'ai joué dans les championnats Francais, Espagnol et Italien qui suis-je ?</h4>
                 <div>
                     <input type="radio" id="Ronaldinho" name="q1" value="a" checked>
                     <label for="Ronaldinho">Ronaldinho</label>
